{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 423,
  "lineage": "e77f85cb-ff34-23c1-5d36-d914638c1ab4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:security-group/sg-0c6ff25fdeb87eadc",
            "description": "Allow Postgres access for testing",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6ff25fdeb87eadc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ecommerce-rds-sg",
            "name_prefix": "",
            "owner_id": "655449637944",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:network-acl/acl-070d7138a06347aa3",
            "default_network_acl_id": "acl-070d7138a06347aa3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-070d7138a06347aa3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "655449637944",
            "subnet_ids": [
              "subnet-069601528501c5175",
              "subnet-0a4dfbe2c3efb4c24",
              "subnet-0c6bee21820e6563c",
              "subnet-0e56cc65108dd2f2c"
            ],
            "tags": {
              "Name": "ecommerce-vpc-default"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-default"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:route-table/rtb-09e5f31902304cff4",
            "default_route_table_id": "rtb-09e5f31902304cff4",
            "id": "rtb-09e5f31902304cff4",
            "owner_id": "655449637944",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecommerce-vpc-default"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:security-group/sg-0d35852826d511beb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d35852826d511beb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "655449637944",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecommerce-vpc-default"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-default"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:internet-gateway/igw-0ebfe179c0af66a2e",
            "id": "igw-0ebfe179c0af66a2e",
            "owner_id": "655449637944",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-vpc"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ebfe179c0af66a2e",
            "id": "r-rtb-0a034a52405b46f521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a034a52405b46f52",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:route-table/rtb-0db07157d6ee85141",
            "id": "rtb-0db07157d6ee85141",
            "owner_id": "655449637944",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecommerce-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:route-table/rtb-0cf55914464801ace",
            "id": "rtb-0cf55914464801ace",
            "owner_id": "655449637944",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecommerce-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-private-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:route-table/rtb-0a034a52405b46f52",
            "id": "rtb-0a034a52405b46f52",
            "owner_id": "655449637944",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ebfe179c0af66a2e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-vpc-public"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bad43d607ca25f31",
            "route_table_id": "rtb-0db07157d6ee85141",
            "subnet_id": "subnet-0c6bee21820e6563c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09edffda663672597",
            "route_table_id": "rtb-0cf55914464801ace",
            "subnet_id": "subnet-0e56cc65108dd2f2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293577646c9c8681",
            "route_table_id": "rtb-0a034a52405b46f52",
            "subnet_id": "subnet-0a4dfbe2c3efb4c24"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d10fc79f1567f7c8",
            "route_table_id": "rtb-0a034a52405b46f52",
            "subnet_id": "subnet-069601528501c5175"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:subnet/subnet-0c6bee21820e6563c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6bee21820e6563c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655449637944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:subnet/subnet-0e56cc65108dd2f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e56cc65108dd2f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655449637944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:subnet/subnet-0a4dfbe2c3efb4c24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4dfbe2c3efb4c24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655449637944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:subnet/subnet-069601528501c5175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069601528501c5175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655449637944",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "ecommerce-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-09c6a89e9e79848a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:655449637944:vpc/vpc-09c6a89e9e79848a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070d7138a06347aa3",
            "default_route_table_id": "rtb-09e5f31902304cff4",
            "default_security_group_id": "sg-0d35852826d511beb",
            "dhcp_options_id": "dopt-0c2c3ada5cbebb9c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c6a89e9e79848a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e5f31902304cff4",
            "owner_id": "655449637944",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}